--- a/webtau-reactjs/src/report/details/TestDetails.css
+++ b/webtau-reactjs/src/report/details/TestDetails.css
@@ -48,6 +48,8 @@
 }
 
 .test-details > .tabs-details-area {
+    display: flex;
+    overflow: auto;
 }
 
 .test-details > .detail-area {
